cmake_minimum_required(VERSION 3.20)
project(LeetCode)

set(CMAKE_CXX_STANDARD 14)

add_executable(
        LeetCode
        main.cpp
        code/leetcode/editor/cn/[883]三维形体投影面积.cpp
        code/leetcode/editor/cn/[884]两句话中的不常见单词.cpp
        code/leetcode/editor/cn/[888]公平的糖果棒交换.cpp
        code/leetcode/editor/cn/[892]三维形体的表面积.cpp
)
